# try-graph-rag

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  main.py  pyproject.toml
notebooks/: phase_1_graph_basics.ipynb  phase_2_diff_between_llm_spacy.ipynb  phase_2_knowledge_graph_handwrite.ipynb  phase_2_knowledge_graph_llm.ipynb  phase_2_knowledge_graph_spacy.ipynb  phase_4_load_triples_to_neo4j.ipynb  phase_4_load_triples_to_neo4j_with_properties.ipynb  tutorial_spaCy.ipynb
src/: __init__.py  config.py  data_handler.py  spacy_helper.py  utils.py
