[project]
name = "try-graph-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "jupyterlab>=4.4.10",
    "langchain>=1.0.5",
    "matplotlib>=3.10.7",
    "neo4j>=6.0.3",
    "networkx>=3.4.2",
    "numpy>=2.2.6",
    "openai>=2.8.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "spacy>=3.8.11",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
]
